--- a/_layouts/subtool.html
+++ b/_layouts/subtool.html
@@ -44,7 +44,21 @@
                 <a href="{{ tool.url }}" class="btn btn-start">Zurück zum {{ tool.title }} </a>
 			        </div>
 			        </div>
+
 				</div>
+            <div class="container">
+                <div class="isotope-wrap">
+                    <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
+                    {% for p in site.pages %}
+                    {% if p.subtool contains page.subtool and p.type contains 'idea' %}
+                        <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
+                            {% include idea-teaser-tile.html post=p %}
+                        </div>
+                    {% endif %}
+                    {% endfor %}
+                </div>
+            </div>
+
 			</div>
         </div>
 	</div>
