--- a/_layouts/thema.html
+++ b/_layouts/thema.html
@@ -18,12 +18,17 @@ hide_hero: true
                 </div>
             </div>
             <div class="container">
+                <div class="col-lg-10 col-lg-offset-1 filters">
+                  {% include thema-filters.liquid %}
+                </div>
+            </div>
+            <div class="container">
                 <div class="isotope-wrap">
                     <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
                     {% for p in site.pages %}
-                    {% if p.thema contains page.thema and p.type contains 'unterthema' %}
-                        <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
-                            {% include thema-teaser-tile.html post=p %}
+                    {% if p.thema contains page.thema and p.type contains 'themacontent' %}
+                        <div class="{{p.unterthema}} col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
+                            {% include unter-thema-teaser-tile.html post=p %}
                         </div>
                     {% endif %}
                     {% endfor %}
