--- a/_layouts/unterthema.html
+++ b/_layouts/unterthema.html
@@ -27,7 +27,7 @@ hide_hero: true
                 <div class="isotope-wrap">
                     <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
                     {% for p in site.pages %}
-                    {% if p.unterthema contains page.unterthema and p.type contains 'idea' %}
+                    {% if p.themacontent contains page.themacontent and p.type contains 'idea' %}
                         <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
                             {% include idea-teaser-tile.html post=p %}
                         </div>
