Get right filters for thema filters

--- a/_layouts/thema.html
+++ b/_layouts/thema.html
@@ -19,7 +19,7 @@ hide_hero: true
             </div>
             <div class="container">
                 <div class="col-lg-10 col-lg-offset-1 filters">
-                  {% include thema-filters.liquid %}
+                  {% include thema-filters.liquid thema=page.thema %}
                 </div>
             </div>
             <div class="container">
