--- a/_sass/_contentpage-elements.scss
+++ b/_sass/_contentpage-elements.scss
@@ -30,7 +30,7 @@ contentpage elements
   &.infobox{
     @include teaser-shadow();
 
-    background-color: $primary-color;
+    background-color: $blue;
     color: $black;
     text-align: left;
     width: 100%;
