--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -7,6 +7,7 @@
 @import "../_sass/mixins";
 @import "../_sass/base";
 @import "../_sass/hero";
+@import "../_sass/contentpage-elements";
 @import "../_sass/events-panel";
 @import "../_sass/post-teaser";
 @import "../_sass/scrollbars";
