--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -80,4 +80,17 @@ probably best not to use it. I mean, were you going to anyway? */
   box-shadow: 0 0 20px 0 rgba(197, 197, 197, 0.5);
 }
 
+@mixin teaser-shadow(){
+  @include transition(box-shadow .5s ease);
+  box-shadow: 10px 10px 15px 1px rgba(0,0,0,0.1);
+}
+@mixin teaser-shadow-hover(){
+  &:hover{
+    transform: scale(1.025);
+    .teaser-inner{
+      box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.1);
+    }
+  }
+}
+
 
