--- a/_layouts/idea.html
+++ b/_layouts/idea.html
@@ -37,7 +37,7 @@
 							{% include tool.html %}
 			        <div class="btn-wrap">
                 {% for p in site.pages %}
-                {% if p.type == 'unterthema' and p.unterthema == page.unterthema %}
+                {% if p.layout contains 'unterthema' and p.unterthema == page.unterthema %}
                 {% assign unterthema = p %}
                 {% endif %}
                 {% endfor %}
@@ -48,13 +48,13 @@
             <div class="isotope-wrap">
                 <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
                 {% for p in site.pages %}
-                {% if p.type contains 'themacontent' or p.type contains 'subtool' %}
-                    {% if p.type == 'themacontent' and page.themacontent contains p.themacontent %}
+                {% if p.layout contains 'unterthema' or p.layout == 'tool' %}
+                    {% if p.layout contains 'unterthema' and page.themacontent contains p.themacontent %}
                     <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
                         {% include unter-thema-teaser-tile.html post=p %}
                     </div>
                     {% endif %}
-                    {% if p.type == 'subtool' and page.subtool contains p.subtool  %}
+                    {% if p.layout contains 'tool' and page.subtool contains p.subtool  %}
                     <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
                         {% include tool-teaser-tile.html post=p %}
                     </div>
