Fix filter on root materialsammlung page

--- a/_includes/thema-teaser-tile.html
+++ b/_includes/thema-teaser-tile.html
@@ -1,4 +1,4 @@
-<div class="post-teaser-inner {{include.post.unterthema}}">
+<div class="post-teaser-inner thema">
     <a href="{{post.link}}">
         <img src="{{post.img}}" class="img-responsive" />
     </a>
