--- a/_includes/blog-filters.liquid
+++ b/_includes/blog-filters.liquid
@@ -1,6 +1,6 @@
 <div class="filter-items green">
   <div class="filter-items-inner col-xs-24">
-      <a href="/" data-filter=".theme" class="filter-item">Themen</a>
+      <a href="/" data-filter=".thema" class="filter-item">Themen</a>
       <a href="/" data-filter=".tool" class="filter-item red">Tool</a>
   </div>
 </div>
