Accept markdown content on Materialsammlung content

--- a/_layouts/unterthema.html
+++ b/_layouts/unterthema.html
@@ -19,7 +19,7 @@ hide_hero: true
                   <a href="{{ thema.url }}"><h3>{{ thema.title }}</h3></a>
                   <h2 class="section-headline">{{ page.title }}</h2>
                     <p>
-                      {{ page.content }}
+                      {{ content }}
                     </p>
                 </div>
             </div>
