--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -13,7 +13,7 @@ hide_hero: true
                   <a href="/materialsammlung"><h3>Selbstlernmaterial</h3></a>
                   <h2 class="section-headline">{{ page.title }}</h2>
                     <p>
-                      {{ page.content }}
+                      {{ content }}
                     </p>
                 </div>
             </div>
