--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -9,7 +9,7 @@ hide_hero: true
     <div class="col-xs-12 fond__white jumbotron">
         <div class="row">
             <div class="container">
-                <div class="col-lg-10 col-lg-offset-1 section-workshop">
+                <div class="col-lg-10 col-lg-offset-1">
                   <a href="/materialsammlung"><h3>Selbstlernmaterial</h3></a>
                   <h2 class="section-headline">{{ page.title }}</h2>
                     <p>
