--- a/_layouts/unterthema.html
+++ b/_layouts/unterthema.html
@@ -15,7 +15,7 @@ hide_hero: true
     <div class="col-xs-12 fond__white jumbotron">
         <div class="row">
             <div class="container">
-                <div class="col-lg-10 col-lg-offset-1 section-workshop">
+                <div class="col-lg-10 col-lg-offset-1">
                   <a href="{{ thema.url }}"><h3>{{ thema.title }}</h3></a>
                   <h2 class="section-headline">{{ page.title }}</h2>
                     <p>
