--- a/_sass/_filter-items.scss
+++ b/_sass/_filter-items.scss
@@ -54,6 +54,10 @@ filter items
       background-color: #fe003e;
       color: $white;
       }
+      &.darkred {
+      background-color: #d90034;
+      color: $white;
+      }
       &.orange {
       background-color: #ec6f19;
       color: $white;
