--- a/_sass/_post-teaser.scss
+++ b/_sass/_post-teaser.scss
@@ -32,6 +32,11 @@
         border-top: 5px solid #fe003e;
       }
     }
+    &.darkred {
+      .post-teaser-content.thema {
+        border-top: 5px solid #d90034;
+      }
+    }
     &.orange {
       .post-teaser-content.thema {
         border-top: 5px solid #ec6f19;
