--- a/_includes/blog-filters.liquid
+++ b/_includes/blog-filters.liquid
@@ -1,4 +1,5 @@
 <div class="filter-items green">
+  <h4 class="filter-items-headline">NACH KATEGORIE FILTERN:</h4>
   <div class="filter-items-inner col-xs-24">
       <a href="/" data-filter=".thema" class="filter-item">Themen</a>
       <a href="/" data-filter=".tool" class="filter-item red">Tool</a>
