--- a/_includes/thema-filters.liquid
+++ b/_includes/thema-filters.liquid
@@ -4,10 +4,12 @@
     {% for p in site.pages %}
       {% if p.layout contains 'unterthema' and p.thema == include.thema %}
         {% if subthema %}
+        {% unless subthema contains p.unterthema %}
         {% assign subthema = subthema | append:'|' %}
+        {% endunless %}
         {% endif %}
         {% unless subthema contains p.unterthema %}
-        {% assign subthema = subthema |  append: p.unterthema %}
+        {% assign subthema = subthema | append: p.unterthema %}
         {% endunless %}
       {% endif %}
     {% endfor %}
