--- a/_sass/_post-teaser.scss
+++ b/_sass/_post-teaser.scss
@@ -47,6 +47,11 @@
         border-top: 3px solid #ec6f19;
       }
     }
+    &.purple {
+      .post-teaser-content.thema {
+        border-top: 3px solid #9C1139;
+      }
+    }
     &.yellow {
       .post-teaser-content.thema {
         border-top: 3px solid #ffbe00;
