--- a/_includes/blog-filters.liquid
+++ b/_includes/blog-filters.liquid
@@ -2,6 +2,6 @@
   <h4 class="filter-items-headline">NACH KATEGORIE FILTERN:</h4>
   <div class="filter-items-inner col-xs-24">
       <a href="/" data-filter=".thema" class="filter-item red">Themen</a>
-      <a href="/" data-filter=".tool" class="filter-item">Tool</a>
+      <a href="/" data-filter=".tool" class="filter-item">Tools</a>
   </div>
 </div>
