--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="jumbotron fond__white partner">
         <div class="container justify-content-center">
             <div class="col-lg-12">
-                <h3>Ein Projekt von</h3>
+
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mb-5 mt-5">
                     <a href="http://www.okfn.de/">
                         <img class="img-responsive logo-okf" src="/static/img/OKFN.png" alt="OKFN Logo"/>
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mb-5 mt-5">
                     <a href="http://bmfsfj.de/">
-                        <img class="img-responsive logo-bmfsfj" src="/static/img/bmfsfj.jpg" alt="BMFSFJ" />
+                        <img class="img-responsive logo-bmfsfj" src="/static/img/BMFSFJ.png" alt="BMFSFJ" />
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mb-5 mt-5">
@@ -20,7 +20,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 mb-5 mt-5">
                     <a href="https://bpb.de">
-                        <img class="img-responsive logo-bmfsfj" src="/static/img/bpb.svg" alt="BPB" />
+                        <img class="img-responsive logo-bmfsfj" src="/static/img/bpb.png" alt="BPB" />
                     </a>
                 </div>
             </div>
