--- a/_includes/thema-teaser-tile.html
+++ b/_includes/thema-teaser-tile.html
@@ -1,24 +1,23 @@
 <div class="post-teaser-inner thema">
     {% assign path = include.post.url %}
-    <a href="{{post.link}}">
-        <img src="{{post.img}}" class="img-responsive" />
-    </a>
+
     <div class="post-teaser-content" style="position: realative;">
         <a href="{{ path }}">
-            <div class="theme-picture">
-                {{ with .Params.img }}<img src="{{.}}" alt="">{{ end }}
+            <div class="post-teaser-img" style="background-image: url('{{ site.baseurl }} {{ include.post.img }}')">
             &nbsp;
             </div>
         </a>
-        <div style="float: right; max-width: 50%; padding-left: 40px;">
-            <h3 class="post-teaser-title" >{{ include.post.title }}</h3>
+        <div class="post-teaser-txt-inner">
+
             <div class="post-teaser-description workshop">
+                <p>Thema</p>
+                <h3 class="post-teaser-title" >{{ include.post.title }}</h3>
                 <p>
                 {{ post.ws_teaser | remove: '<p>' | remove: '</p>'}}
                 {{ include.post.teaser }}
                 </p>
 
-                <a href="{{ path }}">zum Thema...</a>
+                <a href="{{ path }}">mehr...</a>
             </div>
         </div>
         <div style="clear: both;">&nbsp;</div>
