fixed responsive on phones

--- a/_includes/thema-teaser-tile.html
+++ b/_includes/thema-teaser-tile.html
@@ -7,7 +7,7 @@
             &nbsp;
             </div>
         </a>
-        <div class="post-teaser-txt-inner">
+        <div class="post-teaser-txt">
 
             <div class="post-teaser-description workshop">
                 <p>Thema</p>
