--- a/_sass/_post-teaser.scss
+++ b/_sass/_post-teaser.scss
@@ -86,7 +86,7 @@
           margin: 20px;
         }
 
-      .post-teaser-txt-inner{
+      .post-teaser-txt{
         float: right;
         width: 50%;
         padding-left: 40px;
