--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -15,7 +15,22 @@
 @import "../_sass/pagination";
 @import "../_sass/filter-items";
 
-@media screen and (min-width: 375px) {
+/*********************
+RETINA (2x RESOLUTION DEVICES)
+This applies to the retina iPhone (4s) and iPad (2,3) along with
+other displays with a 2x resolution. You can also create a media
+query for retina AND a certain size if you want. Go Nuts.
+*********************/
+@media only screen and (min-width:550px) and (max-width:710px) and (-webkit-min-device-pixel-ratio: 1.5),
+       only screen and (min-width:550px) and (max-width:710px) and (min--moz-device-pixel-ratio: 1.5),
+       only screen and (min-width:550px) and (max-width:710px) and (min-device-pixel-ratio: 1.5){
+
+   // styles in 2x.scss
+   @import "../_sass/2x";
+
+} // end of media query
+
+@media only screen and (max-width: 375px) {
   @import "../_sass/375";
 }
 
