--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -22,7 +22,7 @@ hide_hero: true
                     <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
                     {% for p in site.pages %}
                     {% if p.tool contains page.tool and p.layout == 'subtool' %}
-                        <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
+                        <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser tool">
                             {% include tool-teaser-tile.html post=p %}
                         </div>
                     {% endif %}
