--- a/_sass/_375.scss
+++ b/_sass/_375.scss
@@ -19,3 +19,11 @@ place.
     width: 100% !important;
     padding-left: 0px !important;
 }
+
+.section-sub-material-img{
+    width: 0%;
+}
+
+.section-sub-material{
+    text-align: center;
+}
