--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -284,8 +284,11 @@ content
   .isotope-item{
     padding: 0;
   }
-}
 
+}
+.sub-material-back{
+    background-color: $grey-bright;
+}
 .section-headline{
   font-size: 28px;
   text-transform: none;
@@ -1203,6 +1206,23 @@ $keep: 44 + 2 * 15px;
   }
 }
 
+.section-sub-material{
+    text-align: left;
+    float: right;
+    .sub-material-arrow-back{
+        color: $grey-dark;
+    }
+}
+.section-sub-material-img{
+    float: left;
+    #sub-page-img{
+        max-width: 70%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+}
 .section-intro, .section-workshop, .section-angebot{
   text-align: center;
 }
