implemented the new sub tool style

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1223,6 +1223,14 @@ $keep: 44 + 2 * 15px;
 
     }
 }
+.page-sub-material{
+  text-align: left;
+
+}
+.page-sub-material-img{
+    width: 80px;
+    padding-left: 0.5em;
+}
 .section-intro, .section-workshop, .section-angebot{
   text-align: center;
 }
