--- a/_layouts/tool.html
+++ b/_layouts/tool.html
@@ -9,11 +9,12 @@ hide_hero: true
     <div class="col-xs-12 fond__white jumbotron">
         <div class="row">
             <div class="container">
-                <div class="col-lg-10 col-lg-offset-1 section-workshop">
-                  <a href="/materialsammlung"><h3>Selbstlernmaterial</h3></a>
-                  <h2 class="section-headline">{{ page.title }}</h2>
+                <div class="col-lg-8 col-lg-offset-2 page-sub-material">
+                    <a href="/materialsammlung"><p class="sub-material-arrow-back"><img src="/static/img/arrow.svg"> Selbstlernmaterial</p></a>
+
+                    <h2 class="section-headline">{{ page.title }}<img class="page-sub-material-img" src="{{ page.img }}"></h2>
                     <p>
-                      {{ content }}
+                        {{ content }}
                     </p>
                 </div>
             </div>
