--- a/_includes/tool.html
+++ b/_includes/tool.html
@@ -1,4 +1,12 @@
 <div class="container">
+	<div class="page-sub-material">
+		{% for p in site.pages %}
+		{% if p.layout contains 'tool' and p.tool == page.tool %}
+		{% assign tool = p %}
+		{% endif %}
+		{% endfor %}
+		<a href="{{ tool.url }}"><p class="sub-material-arrow-back"><img src="/static/img/arrow.svg"> Zurück zu: „{{ tool.title }}“</p></a>
+	</div>
 	<div class="row">
 		<div class="col-lg-12">
 			<h1 class="section-headline">{{ page.title }}</h1>
@@ -31,4 +39,16 @@
 		</div>
 	</div>
 </div>
-
+<div class="container">
+	<h2>Ideen</h2>
+	<div class="isotope-wrap">
+		<div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
+		{% for p in site.pages %}
+		{% if p.subtool contains page.subtool and p.layout contains 'idea' %}
+		<div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
+			{% include idea-teaser-tile.html post=p %}
+		</div>
+		{% endif %}
+		{% endfor %}
+	</div>
+</div>
