--- a/_layouts/subtool.html
+++ b/_layouts/subtool.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
-<html class="no-js" lang="de" >
+<!--[if lt IE 7]>
+<html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="de"> <![endif]-->
+<!--[if IE 7]>
+<html class="no-js lt-ie9 lt-ie8" lang="de" > <![endif]-->
+<!--[if IE 8]>
+<html class="no-js lt-ie9" lang="de" > <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="de" > <!--<![endif]-->
 
 <head>
 	<meta charset="utf-8">
@@ -13,52 +20,34 @@
 	</title>
 
 	<meta name="description" content="{{ page.excerpt | strip_html }}">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+	<meta name="viewport" content="width=device-width, user-scalable=no">
 	{% include head-social-og.html %}
 	<link rel="stylesheet" href="/static/fonts/overpass/overpass.css">
 	<link rel="stylesheet" href="/static/css/bootstrap.css">
 	<link rel="stylesheet" href="/static/css/animate.css">
 	<link rel="stylesheet" href="/static/css/main.css?v=1.4">
 	<link rel="icon" href="/static/img/favicon.ico" type="image/x-icon" />
-
-
 </head>
 
-
 <body>
-
+<!--[if lt IE 7]>
+<p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to
+	improve your experience.</p>
+<![endif]-->
 <div class="body-wrap">
 	<div class="page-wrap">
         {% include header-nav.liquid %}
         <div class="row">
-   			<div class="beneath-sections jumbotron fond__white post">
-			    <div class="row">
-			        <div class="col-lg-6 col-lg-offset-3 blog-main" >
-							{% include tool.html %}
-			        <div class="btn-wrap">
-                {% for p in site.pages %}
-                {% if p.layout contains 'tool' and p.tool == page.tool %}
-                {% assign tool = p %}
-                {% endif %}
-                {% endfor %}
-                <a href="{{ tool.url }}" class="btn btn-start">Zurück zum {{ tool.title }} </a>
-			        </div>
-			        </div>
-
+			<div class="content-wrap col-xs-12">
+				<div class="row">
+					<div class="col-xs-12 fond__white jumbotron">
+						<div class="row">
+								<div class="col-lg-10 col-lg-offset-1">
+									{% include tool.html %}
+								</div>
+						</div>
+					</div>
 				</div>
-            <div class="container">
-                <div class="isotope-wrap">
-                    <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
-                    {% for p in site.pages %}
-                    {% if p.subtool contains page.subtool and p.layout contains 'idea' %}
-                        <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
-                            {% include idea-teaser-tile.html post=p %}
-                        </div>
-                    {% endif %}
-                    {% endfor %}
-                </div>
-            </div>
-
 			</div>
         </div>
 	</div>
