--- a/_layouts/thema.html
+++ b/_layouts/thema.html
@@ -13,7 +13,7 @@ hide_hero: true
                     <img src="{{ page.img-subpage }}" id="sub-page-img">
                 </div>
                 <div class="col-lg-7 section-sub-material">
-                  <a href="/materialsammlung"><p class="sub-material-arrow-back"><img src="/static/img/arrow.svg"> Selbstlernmaterial</p></a>
+                  <a href="/materialsammlung"><p class="sub-material-arrow-back"><img src="/static/img/arrow.svg"> Zurück</p></a>
 
                   <h2 class="section-headline">{{ page.title }}</h2>
                     <p>
