--- a/_sass/_contentpage-elements.scss
+++ b/_sass/_contentpage-elements.scss
@@ -56,6 +56,22 @@ contentpage elements
 
 }
 
+.video {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+}
+
 .infobox-quote {
 
     background-color: transparent !important;
