--- a/_layouts/unterthema.html
+++ b/_layouts/unterthema.html
@@ -11,16 +11,8 @@ hide_hero: true
         <div class="row">
             <div class="container">
                 <div class="col-lg-10 col-lg-offset-1">
-                    <div class="page-sub-material">
-                        {% for p in site.pages %}
-                        {% if p.layout contains 'thema' and p.thema == page.thema %}
-                        {% assign tool = p %}
-                        {% endif %}
-                        {% endfor %}
-                        <a href="{{ tool.url }}"><p class="sub-material-arrow-back"><img src="/static/img/arrow.svg"> Zurück zu: „{{ tool.title }}“</p></a>
-                    </div>
-                    <a href="{{ thema.url }}"><h3>{{ thema.title }}</h3></a>
-                    <h2 class="section-headline">{{ page.title }}</h2>
+                    <div class="page-sub-material"><a href="javascript:history.back()"><p class="sub-material-arrow-back"><img src="/static/img/arrow.svg"> Zurück</p></a></div>
+                    <h1 class="section-headline">{{ page.title }}</h1>
                     <p>
                       {{ content }}
                     </p>
