--- a/_includes/thema-teaser-tile.html
+++ b/_includes/thema-teaser-tile.html
@@ -11,7 +11,9 @@
 
             <div class="post-teaser-description workshop">
                 <p>Thema</p>
-                <h3 class="post-teaser-title" >{{ include.post.title }}</h3>
+                <a href="{{ path }}">
+                    <h3 class="post-teaser-title" >{{ include.post.title }}</h3>
+                </a>
                 <p>
                 {{ post.ws_teaser | remove: '<p>' | remove: '</p>'}}
                 {{ include.post.teaser }}
