--- a/_sass/_filter-items.scss
+++ b/_sass/_filter-items.scss
@@ -22,8 +22,10 @@ filter items
 
   .filter-items-headline{
     color: $black;
-    font-size: 0.8em;
+    font-size: 0.6em;
     font-weight: 700;
+    margin: 4em 0 0 0;
+    
   }
   .filter-items-inner{
 
