--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -339,7 +339,9 @@ div, h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 h1, .h1, h2, .h2, h3, .h3 {
   margin: 24px 0;
   text-transform: none;
-  font-size: 22px
+  font-size: 22px;
+  font-weight: 600;
+
 }
 
 h2, .h2 {
@@ -423,11 +425,12 @@ label {
   }
   #teaser-oer-page {
     a{
-
-      text-decoration: underline;
+      color: $blue;
+      //text-decoration: underline;
     }
     a:hover{
       text-decoration: none;
+      text-decoration: underline;
     }
   }
 }
@@ -1235,6 +1238,13 @@ $keep: 44 + 2 * 15px;
 }
 .section-intro, .section-workshop, .section-angebot{
   text-align: center;
+}
+
+.section-sammlung{
+  text-align: center;
+  background-image: url("/static/img/sammlung_intro.png");
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 .introtext {
   font-size: 20px;
