--- a/_includes/content-infobox.liquid
+++ b/_includes/content-infobox.liquid
@@ -1,4 +1,4 @@
-<span class="content-element infobox {{ include.float }}">
-    <span class="infobox-headline">{{ include.headline }}</span>
-    <span class="infobox-copy">{{ include.copy }}</span>
-</span>
+<div class="content-element infobox {{ include.float }}">
+    <h3 class="infobox-headline">{{ include.headline }}</h3>
+    <p class="infobox-copy">{{ include.copy }}</p>
+</div>
