--- a/_layouts/untertool.html
+++ b/_layouts/untertool.html
@@ -15,10 +15,18 @@ hide_hero: true
                     <p>
                       {{ content }}
                     </p>
+                    {% assign flag = false %}
+                    {% for p in site.pages %}
+                    {% if p.subtool contains page.subtool and p.layout contains 'idea' %}
+                        {% assign flag = true %}
+                    {% endif %}
+                    {% endfor %}
+                    {% if flag == true %}
+                        <h2>Ideen</h2>
+                    {% endif %}
                 </div>
             </div>
             <div class="container">
-                <h2>Ideen</h2>
                 <div class="isotope-wrap">
                     <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
                     {% for p in site.pages %}
