--- a/_sass/_contentpage-elements.scss
+++ b/_sass/_contentpage-elements.scss
@@ -33,8 +33,10 @@ contentpage elements
     background-color: $blue;
     color: $black;
     text-align: left;
-    width: 100%;
-    padding: 20px;
+    width: 40%;
+    padding: 30px;
+    padding-top: 8px;
+    padding-bottom: 0px;
 
     .infobox-headline{
       font-weight: 700;
@@ -47,11 +49,15 @@ contentpage elements
     }
     }
     .infobox-headline, .infobox-copy{
-      font-size: 1.25rem;
+      color: white;
       display: block;
-      line-height: 1.2;
-    }
 
+    }
+    ul{
+        color: white;
+        line-height: 1.5;
+        padding-left: 20px;
+    }
   }
 
 }
