--- a/_layouts/ideas.html
+++ b/_layouts/ideas.html
@@ -9,11 +9,15 @@ hide_hero: true
     <div class="col-xs-12 fond__white jumbotron">
         <div class="row">
             <div class="container">
-                <div class="col-lg-8 col-lg-offset-1 section-workshop">
-                  <a href="/materialsammlung"><h3>Selbstlernmaterial</h3></a>
-                  <h2 class="section-headline">{{ page.title }}</h2>
+                <div class="col-lg-5 section-sub-material-img">
+                    <img src="{{ page.img-subpage }}" id="sub-page-img">
+                </div>
+                <div class="col-lg-7 section-sub-material">
+                    <a href="/materialsammlung"><p class="sub-material-arrow-back"><img src="/static/img/arrow.svg"> Zurück</p></a>
+
+                    <h2 class="section-headline">{{ page.title }}</h2>
                     <p>
-                      {{ content }}
+                        {{ content }}
                     </p>
                 </div>
             </div>
@@ -21,7 +25,7 @@ hide_hero: true
                 <div class="isotope-wrap">
                     <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
                     {% for p in site.pages %}
-                    {% if p.layout contains 'idea' %}
+                    {% if p.layout contains 'idee' %}
                         <div class="{{p.unterthema}} col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
                             {% include unter-thema-teaser-tile.html post=p %}
                         </div>
