fixed idea logic

--- a/_layouts/untertool.html
+++ b/_layouts/untertool.html
@@ -17,12 +17,13 @@ hide_hero: true
                     </p>
                     {% assign flag = false %}
                     {% for p in site.pages %}
-                    {% if p.subtool contains page.subtool and p.layout contains 'idea' %}
+                    {% if p.subtool contains page.subtool and p.layout contains 'idee' %}
                         {% assign flag = true %}
                     {% endif %}
                     {% endfor %}
                     {% if flag == true %}
-                        <h2>Ideen</h2>
+                        <hr>
+                        <h2>Projektideen</h2>
                     {% endif %}
                 </div>
             </div>
