--- a/_layouts/idee.html
+++ b/_layouts/idee.html
@@ -15,6 +15,8 @@ hide_hero: true
                     <p>
                       {{ content }}
                     </p>
+                    <hr>
+                    <h2>Folgende Themen und Tools sind mit dieser Idee verbunden</h2>
                 </div>
             </div>
             <div class="container">
